# FX_Diffusion_Cursor

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
configs/: default.yaml
src/forex_diffusion/: __init__.py
src/forex_diffusion/backtest/: engine.py
src/forex_diffusion/data/: io.py
src/forex_diffusion/features/: pipeline.py
src/forex_diffusion/inference/: service.py
src/forex_diffusion/models/: diffusion.py  vae.py
src/forex_diffusion/postproc/: uncertainty.py
src/forex_diffusion/services/: db.py  marketdata.py
src/forex_diffusion/train/: loop.py
src/forex_diffusion/ui/: app.py  menus.py  viewer.py
src/forex_diffusion/utils/: config.py  logging.py  metrics.py
tests/: test_data_and_features.py
